--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-bootstrap-pagination-control": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-int": "^0.3.3",
     "react-intl": "^6.6.5",
     "react-js-pagination": "^3.0.3",
@@ -31,6 +33,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.11",
+    "swiper": "^11.1.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
