--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ REACT_APP_API_URL=http://localhost:8000/api
 REACT_APP_API_BACKEND=http://localhost:8000
 
 REACT_APP_API_UNITE= "FCFA"
+
+REACT_APP_API_PHONE = "676892402"
+
+REACT_APP_API_MESSAGE = "Bienvenu sur notre page"
