--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./", 
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.4.2",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
@@ -15,6 +21,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-bootstrap-pagination-control": "^1.0.5",
