--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./", 
+  "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -25,12 +25,14 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-bootstrap-pagination-control": "^1.0.5",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-infinite-scroll-component": "^6.1.0",
     "react-int": "^0.3.3",
     "react-intl": "^6.6.5",
     "react-js-pagination": "^3.0.3",
+    "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
