--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_API_URL=http://88.223.95.15:8000/api
-REACT_APP_API_BACKEND=http://localhost:8000
+REACT_APP_API_BACKEND=https://cms.boutiquebambino.com
 
 REACT_APP_API_UNITE= "FCFA"
 
