I added the badge on the number of products cart

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-REACT_APP_API_URL=http://88.223.95.15:8000/api
+REACT_APP_API_URL=http://localhost:8000/api
 REACT_APP_API_BACKEND=https://cms.boutiquebambino.com
 
 REACT_APP_API_UNITE= "FCFA"
 
-REACT_APP_API_PHONE = "676892402"
+REACT_APP_API_PHONE = "691 74 98 17"
+REACT_APP_API_PHONE_WITHOUT_SPACE = "691749817"
+REACT_APP_API_PHONE_MTN = "652 11 47 43"
 
 REACT_APP_API_MESSAGE = "Bienvenu sur notre page"
